adding lint edits to scss

--- a/src/sass/crn_app/_notification.alert.scss
+++ b/src/sass/crn_app/_notification.alert.scss
@@ -1,6 +1,7 @@
 
 //Alerts // ================================================================
 .alert {
+    @include border-radius(0);
     font-size: 14px;
     background: $transparent7;
     border: 0;
@@ -51,10 +52,10 @@
 .navbar {
     .alert {
         position: absolute;
-        left: 1%;
-        top: 5px;
+        left: 0;
+        top: 0;
         font-size: 18px;
-        width: 98%;
-        min-height: 64px;
+        width: 100%;
+        min-height: 75px;
     }
 }
