--- a/src/sass/crn_app/_common.modals.scss
+++ b/src/sass/crn_app/_common.modals.scss
@@ -1,82 +1,3 @@
-.sign-in-block,
-.modal {
-
-    .modal-actions {
-        padding: 0;
-    }
-
-    .alert {
-        position: relative;
-        top: 0;
-        bottom: 0;
-        right: 0;
-        left: 0;
-        max-width: 100%;
-    }
-}
-
-.share-modal {
-    .select-box-style {
-        margin-right: 0;
-    }
-
-    .caret-down {
-        margin-top: 29px;
-    }
-}
-
-.update-modal {
-
-    .modal-text {
-        font-size: 18px;
-    }
-
-    .parameters {
-        margin: 10px;
-
-        .form-group {
-            padding: 5px;
-            margin: 0 -15px;
-
-            .input-group {
-
-                .input-group-addon {
-                    width: auto;
-                    font-size: 12px;
-                    margin: 5px 0 0;
-                    padding: 0 0 0 13px;
-                    float: left;
-                    display: block;
-                }
-
-                label {
-                    float: left;
-                }
-            }
-        }
-    }
-}
-
-.anaylsis-modal {
-
-    .task-select {
-        border: 1px solid $ccc;
-        padding: 0;
-
-        select {
-            border: 0;
-        }
-    }
-
-    .default-reset {
-        padding: 10px;
-    }
-
-    .modal-actions {
-        margin-top: 10px;
-        padding: 0;
-    }
-}
 
 // modal form elements
 .parameters {
@@ -130,7 +51,7 @@
             + label {
                 position: relative;
                 display: flex;
-                margin: .6em 0;
+                margin: 0 0 10px 10px;
                 align-items: center;
                 color: $c-9e;
                 transition: color 250ms cubic-bezier(.4, .0, .23, 1);
@@ -200,6 +121,86 @@
         margin: 5px 0 0;
         color: $c-9e;
         background: $eee;
+    }
+}
+
+.sign-in-block,
+.modal {
+
+    .modal-actions {
+        padding: 0;
+    }
+
+    .alert {
+        position: relative;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        max-width: 100%;
+    }
+}
+
+.share-modal {
+    .select-box-style {
+        margin-right: 0;
+    }
+
+    .caret-down {
+        margin-top: 29px;
+    }
+}
+
+.update-modal {
+
+    .modal-text {
+        font-size: 18px;
+    }
+
+    .parameters {
+        margin: 10px;
+
+        .form-group {
+            padding: 5px;
+            margin: 0 -15px;
+
+            .input-group {
+
+                .input-group-addon {
+                    width: auto;
+                    font-size: 12px;
+                    margin: 10px 0 0;
+                    padding: 0 0 0 13px;
+                    float: left;
+                    display: block;
+                }
+
+                label {
+                    float: left;
+                }
+            }
+        }
+    }
+}
+
+.anaylsis-modal {
+
+    .task-select {
+        border: 1px solid $ccc;
+        padding: 0;
+
+        select {
+            border: 0;
+        }
+    }
+
+    .default-reset {
+        padding: 10px;
+    }
+
+    .modal-actions {
+        margin-top: 10px;
+        padding: 0;
     }
 }
 
