--- a/src/sass/crn_app/_variables.scss
+++ b/src/sass/crn_app/_variables.scss
@@ -4,6 +4,7 @@ $transparent1: rgba(0, 0, 0, .1);
 $transparent3: rgba(0, 0, 0, .3);
 $transparent5: rgba(0, 0, 0, .7);
 $transparent7: rgba(0, 0, 0, .7);
+$transparent8: rgba(0, 0, 0, .8);
 $transparent9: rgba(0, 0, 0, .9);
 
 $transparent1-w: rgba(255, 255, 255, .1);
@@ -24,6 +25,8 @@ $algae:#175e54;
 $sky:#007c92;
 $turquoise:#009b76;
 $night:#012a30; //body font color
+
+$lime-green: #5EFF00;
 
 
 $notification-green: #77e6a3;
