--- a/src/sass/crn_app/_dataset.file-tree.scss
+++ b/src/sass/crn_app/_dataset.file-tree.scss
@@ -81,8 +81,8 @@
             }
 
             .panel-heading .panel-title {
-                font-size: 18px;
-                color: $c-42;
+                font-size: 21px;
+                color: $c-33;
                 line-height: 21px;
                 padding: 0;
                 display: inline-block;
@@ -97,7 +97,6 @@
                 ul {
                     padding: 0;
                     position: relative;
-
                     li {
                         position: relative;
 
@@ -106,17 +105,21 @@
                             top: 5px;
                             right: 5px;
                         }
+
+                        .btn-file-folder {
+                            color: $c-66;
+                        }
                     }
                 }
 
                 >ul {
                     overflow: visible;
                     height: auto;
-                    padding: 10px;
+                    padding: 0;
                     margin: 0;
 
                     li {
-                        padding: 3px 0 3px 10px;
+                        padding: 6px 0 6px 10px;
                         list-style: none;
                         margin: 2px;
 
