--- a/src/sass/crn_app/_common.modals.scss
+++ b/src/sass/crn_app/_common.modals.scss
@@ -171,12 +171,12 @@
                 font-size: 20px;
 
                 .modal-title {
-                    color: $lime-green;
+                    color: $white;
                     font-size: 30px;
                 }
 
                 .close {
-                    color: $lime-green;
+                    color: $white;
                     margin-top: -10px !important;
                     font-size: 50px;
                 }
