adjusting sidebar for dataset page, and main navigation

--- a/src/sass/crn_app/_admin.admin.scss
+++ b/src/sass/crn_app/_admin.admin.scss
@@ -20,12 +20,12 @@
             float: left;
         }
 
-        .dashboard-dataset-teasers .btn-blue {
+        .admin-blacklist .btn-blue {
             float: right;
             width: 100px;
             padding: 10px;
             font-size: 12px;
-            margin: 0 10px;
+            margin: 20px 10px 0;
         }
 
         .no-results {
