--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -24,12 +24,12 @@
 
 //component specific
 @import './crn_app/nav.navbar';
-@import './crn_app/nav.left_navbar';
 @import './crn_app/notification.alert';
 @import './crn_app/dataset.dataset';
 @import './crn_app/dataset.jobs';
 @import './crn_app/dataset.tools';
 @import './crn_app/dataset.file-tree';
+@import './crn_app/dataset.sidebar';
 @import './crn_app/admin.admin';
 @import './crn_app/user.signin';
 @import './crn_app/dashboard.datasets';
@@ -40,11 +40,13 @@
 // annimations ============================================================
 @import 'animate/_fading-entrances/fading-entrances';
 @import 'animate/_sliding-entrances/sliding-entrances';
+@import 'animate/_sliding-exits/sliding-exits';
 @import 'animate/_flippers/flippers';
 
 
 .fade-in {@include fadeIn();}
 .slide-in-left {@include slideInLeft();}
+.slide-out-left {@include slideOutLeft();}
 .slide-in-right-fast {@include slideInRightFast();}
 %slide-in-down { @include slideInDown();}
 .flipin-x {@include flipInX();}
