--- a/src/sass/crn_app/_common.status.scss
+++ b/src/sass/crn_app/_common.status.scss
@@ -1,25 +1,28 @@
-.dataset .status-container {
-    width: 100%;
-    float: none;
-    box-sizing: border-box;
+.snapshot,
+.dataset {
+    .status-container {
+        width: 100%;
+        float: none;
+        box-sizing: border-box;
 
-    .status-wrap {
-        padding: 0;
-        margin: 0;
+        .status-wrap {
+            padding: 0;
+            margin: 0;
 
-        > span {
-            @extend %clearfix;
-            padding: 20px 0 0;
-            display: block;
-        }
+            > span {
+                @extend %clearfix;
+                padding: 20px 0 0;
+                display: block;
+            }
 
-        .status {
-            display: inline-block;
-            width: auto;
-            float: left;
-            margin-left: 0;
-            margin-right: 15px;
-            text-align: left;
+            .status {
+                display: inline-block;
+                width: auto;
+                float: left;
+                margin-left: 0;
+                margin-right: 15px;
+                text-align: left;
+            }
         }
     }
 }
