--- a/src/sass/crn_app/_dataset.dataset.scss
+++ b/src/sass/crn_app/_dataset.dataset.scss
@@ -1,6 +1,11 @@
+.snapshot,
 .dataset {
-    .dataset-wrap {
-        padding-top: 35px;
+    .dataset-route {
+        margin-top: -30px;
+    }
+
+    .dataset-inner {
+        padding-top: 60px;
 
         h1 {
             margin: 0 0 15px;
