--- a/src/sass/crn_app/_dataset.tools.scss
+++ b/src/sass/crn_app/_dataset.tools.scss
@@ -1,7 +1,7 @@
 
 .dataset-tools-wrap {
-    margin: -20px 0 20px;
-    padding: 0;
+    margin: 0 0 20px;
+    padding: 0 0 0 42px;
     position: fixed;
     z-index: 1000;
     height: 45px;
@@ -40,39 +40,31 @@
             }
         }
 
-        .snapshot-select {
+        .snapshot-select-label {
             text-align: center;
-            padding: 0 10px 0 5px;
             float: left;
             display: block;
-            overflow: hidden;
-            border-right: 1px solid $aaa;
             margin-right: 5px;
             position: relative;
+            color: $c-66;
+            border-right: 2px solid $ccc;
+            width: auto;
+            max-width: 400px;
+            font-size: 21px;
+            overflow: hidden;
+            transition: max-width 1s;
 
-            span {
-                background: transparent;
-                border: 1px solid $aaa;
-                display: block;
-                height: 30px;
-                margin: 7px 0;
+            div {
+                padding: 7px 20px;
+                white-space: nowrap;
+                height: 45px;
 
-                select {
-                    background: none;
-                    border: 0;
-                    min-width: 230px;
-                    color: $ocean;
-                    margin: 0;
-                    height: 30px;
-                    font-size: 14px;
-                    filter: none;
+                &.snapshot {
+                    color: $c-56;
+                }
 
-                    &:focus {
-                        outline: none;
-                        box-shadow: none;
-                    }
-
-                    option {text-transform: initial;}
+                &.draft {
+                    color: $brand-danger;
                 }
             }
         }
@@ -143,4 +135,11 @@
             }
         }
     }
+}
+
+.open .dataset-tools-wrap .tools .snapshot-select-label {
+    max-width: 0;
+    padding: 0;
+    margin: 0;
+    transition: max-width .5s;
 }
