--- a/src/sass/crn_app/_nav.navbar.scss
+++ b/src/sass/crn_app/_nav.navbar.scss
@@ -20,8 +20,8 @@
     border: 0;
     z-index: 1300;
 
-    .navbar-nav > li > {
-        .link {
+    .navbar-nav {
+        > li > .link {
             border: 1px solid transparent;
             padding: 10px;
             color: $misty;
@@ -40,10 +40,182 @@
                 border-color: $misty;
             }
         }
+
+        &.main-nav {
+            float: right;
+            margin-right: -15px;
+
+            a {
+                color: $misty;
+                padding: 15px 20px;
+
+                &:hover,
+                &:focus,
+                &:active,
+                &.active {
+                    color: $white;
+                    background: $transparent1-w;
+                }
+
+                i {
+                    display: block;
+                    width: 100%;
+                    text-align: center;
+                    font-size: 21px;
+                }
+
+                .link-name {
+                    display: block;
+                    width: 100%;
+                    margin-top: 5px;
+                    font-size: 14px;
+                    text-transform: uppercase;
+                }
+            }
+
+            .user-wrap {
+                margin: 0;
+                height: 75px;
+                vertical-align: middle;
+                padding: 16px 95px 0 28px;
+                border-left: 2px solid $c-56;
+                background: $c-21;
+
+                .greeting {text-transform: uppercase;}
+            }
+
+            .user-img-thumb {
+                width: 75px;
+                height: auto;
+                overflow: hidden;
+                //box-shadow: 1px 2px 3px -2px rgba(0, 0, 0, 0.5);
+                position: absolute;
+                top: 0;
+                right: 0;
+            }
+
+
+            .user-menu {
+                position: initial;
+
+                &.btn-null {
+                    .btn {
+                        background: $transparent;
+                        box-shadow: none;
+                        outline: none;
+                        border: 0;
+                        border-radius: 0;
+                        padding: 0;
+                        text-align: center;
+                        margin: 0;
+                        color: $white;
+                        position: absolute;
+                        right: 0;
+                        left: auto;
+                        width: 75px;
+                        height: 75px;
+                        top: 0;
+
+                        .caret {display: none;}
+
+                        i {
+                            top: 0;
+                            right: 0;
+                            position: absolute;
+                            padding: 0;
+                            background-color: $transparent3;
+                            width: 30%;
+                            height: 30%;
+                            line-height: 25px;
+                            transition: all .3s ease;
+                        }
+
+                        &.active,
+                        &:active,
+                        &:hover,
+                        &.hover,
+                        &:focus {
+
+                            i {
+                                transition: all .3s ease;
+                                background-color: $transparent3;
+                                width: 100%;
+                                height: 100%;
+                                line-height: 75px;
+                            }
+                        }
+                    }
+
+                    &.open {
+                        .btn {
+                            background: $transparent3;
+                            box-shadow: none;
+                            outline: none;
+                            border: 0;
+                        }
+                    }
+                }
+
+                .dropdown-toggle {padding: 25px 15px;}
+
+                .dropdown-menu {
+                    background-color: $white;
+                    padding: 20px 15px 0;
+                    margin: 2px 8px 0 0;
+                    border-radius: 0;
+                    box-shadow: 1px 2px 4px -3px $transparent7;
+                    border-color: $f4;
+
+                    .dropdown-header {
+                        width: 100%;
+                        text-align: center;
+                        padding: 10px 0;
+                    }
+
+                    img {
+                        width: 100px;
+                        margin: 0 auto;
+                        display: block;
+                    }
+
+                    .um-sign-out {
+                        width: auto;
+                        margin: 0;
+                        display: block;
+                        text-align: center;
+                        font-size: 12px;
+                        border: 0;
+                        padding: 0;
+                        color: $primary;
+                    }
+
+                    .um-icon {
+                        font-size: 20px;
+                        background-color: $transparent;
+                        margin: 2px 0 10px;
+                        padding: 0;
+                        float: left;
+
+                        a {
+                            display: inline;
+                            padding: 3px;
+                            margin: 0;
+                            background-color: $transparent;
+                            color: $c-77;
+
+                            &:hover {color: $primary;}
+
+                            &.active {color: darken($c-77, 5%);}
+                        }
+                    }
+                }
+            }
+        }
     }
 }
 
 .navbar-brand {height: 75px;}
+
 
 .sign-in-nav-btn {
     margin: 15px 20px;
@@ -67,141 +239,3 @@
     }
 }
 
-.navbar-right.useradmin-nav {
-    margin: 0;
-
-    .user-wrap {
-        margin: 15px 75px 0 0;
-        float: left;
-        text-align: right;
-        display: block;
-
-        .greeting {text-transform: uppercase;}
-    }
-
-    .user-img-thumb {
-        width: 75px;
-        height: auto;
-        overflow: hidden;
-        //box-shadow: 1px 2px 3px -2px rgba(0, 0, 0, 0.5);
-        position: absolute;
-        top: 0;
-        right: 0;
-    }
-}
-
-.user-menu {
-    position: initial;
-
-    &.btn-null {
-        .btn {
-            background: $transparent;
-            box-shadow: none;
-            outline: none;
-            border: 0;
-            border-radius: 0;
-            height: 100%;
-            padding: 0;
-            text-align: center;
-            margin: 0;
-            color: $white;
-            position: absolute;
-            right: 0;
-            left: auto;
-            width: 75px;
-            top: 0;
-
-            .caret {display: none;}
-
-            i {
-                top: 0;
-                right: 0;
-                position: absolute;
-                padding: 0;
-                background-color: $transparent3;
-                width: 30%;
-                height: 30%;
-                line-height: 25px;
-                transition: all .3s ease;
-            }
-
-            &.active,
-            &:active,
-            &:hover,
-            &.hover,
-            &:focus {
-
-                i {
-                    transition: all .3s ease;
-                    background-color: $transparent3;
-                    width: 100%;
-                    height: 100%;
-                    line-height: 75px;
-                }
-            }
-        }
-
-        &.open {
-            .btn {
-                background: $transparent3;
-                box-shadow: none;
-                outline: none;
-                border: 0;
-            }
-        }
-    }
-
-    .dropdown-toggle {padding: 25px 15px;}
-
-    .dropdown-menu {
-        background-color: $white;
-        padding: 20px 15px 0;
-        margin: 2px 8px 0 0;
-        border-radius: 0;
-        box-shadow: 1px 2px 4px -3px $transparent7;
-        border-color: $f4;
-
-        .dropdown-header {
-            width: 100%;
-            text-align: center;
-            padding: 10px 0;
-        }
-
-        img {
-            width: 100px;
-            margin: 0 auto;
-            display: block;
-        }
-
-        .um-sign-out {
-            width: auto;
-            margin: 0;
-            display: block;
-            text-align: center;
-            font-size: 12px;
-            border: 0;
-            padding: 0;
-            color: $primary;
-        }
-
-        .um-icon {
-            font-size: 20px;
-            background-color: $transparent;
-            margin: 2px 0 10px;
-            padding: 0;
-            float: left;
-
-            a {
-                display: inline;
-                padding: 3px;
-                margin: 0;
-                background-color: $transparent;
-                color: $c-77;
-
-                &:hover {color: $primary;}
-
-                &.active {color: darken($c-77, 5%);}
-            }
-        }
-    }
-}
