adjusting sidebar for dataset page, and main navigation

--- a/src/sass/crn_app/_dataset.sidebar.scss
+++ b/src/sass/crn_app/_dataset.sidebar.scss
@@ -36,7 +36,7 @@
         padding: 0;
 
         h3 {
-            height: 45px;
+            min-height: 45px;
             margin: 0;
             color: $white;
             padding: 11px 15px;
