--- a/src/sass/crn_app/_dataset.tools.scss
+++ b/src/sass/crn_app/_dataset.tools.scss
@@ -1,7 +1,7 @@
 
 .dataset-tools-wrap {
     margin: 0 0 20px;
-    padding: 0 0 0 42px;
+    padding: 0;
     position: fixed;
     z-index: 1000;
     height: 45px;
@@ -142,4 +142,5 @@
     padding: 0;
     margin: 0;
     transition: max-width .5s;
+    border:none;
 }
