--- a/src/sass/crn_app/_dataset.jobs.scss
+++ b/src/sass/crn_app/_dataset.jobs.scss
@@ -34,6 +34,7 @@
                             }
                         }
                     }
+
                 }
             }
         }
@@ -72,6 +73,234 @@
 
                     .meta label {
                         text-transform: none;
+                    }
+                }
+
+                .finished .badge {
+                    color: $brand-success;
+                }
+            }
+
+            .panel-body .inner {
+                margin: -15px;
+                display: block;
+            }
+
+            .results {
+                margin: 0;
+
+                .panel {
+                    @include border-radius(0);
+                    border: 0;
+                    border-top: 1px solid $ccc;
+
+                    .panel-heading .panel-title {
+                        padding: 0;
+                        background: lighten($misty, 10%);
+
+                        a {
+                            padding: 8px 15px;
+                            display: block;
+                            font-size: 14px;
+
+                            &::after {
+                                content: '\f0d8';
+                                font-family: FontAwesome;
+                                float: right;
+                                font-size: 12px;
+                                margin-top: 3px;
+                            }
+
+                            &.collapsed {
+
+                                &::after {
+                                    content: '\f0d7';
+                                }
+                            }
+                        }
+                    }
+
+                    ul {
+                        padding: 0;
+                        list-style: none;
+                    }
+
+                    .result-name {
+                        padding-left: 10px;
+                        display: inline-block;
+                        vertical-align: middle;
+                        line-height: 1.3;
+                    }
+
+                    .warning-btn-wrap {
+                        display: inline-block;
+                        overflow: hidden;
+                        vertical-align: middle;
+                        text-align: right;
+
+                        .btn-warn-component {
+                            overflow: hidden;
+                            line-height: 1.3;
+
+                            i {
+                                line-height: 1;
+                            }
+                        }
+
+                        .cancel,
+                        .success {
+                            padding: 2px 4px;
+                            line-height: 1.1;
+                            margin: 0;
+                            vertical-align: middle;
+
+                            i {
+                                line-height: 1;
+                            }
+                        }
+
+                        .cancel {
+                            margin-right: 5px;
+                        }
+                    }
+                    //     width: 50px;
+                    //     text-align: center;
+                    //     overflow: hidden;
+                    //     display: inline-block;
+                    //     line-height: 1.1;
+                    //     vertical-align: middle;
+                    //     font-size: 14px;
+                    //     margin: 7px 5px 5px 0;
+                    //     height: 20px;
+
+                    //     .btn-warn-component {
+                    //         line-height: 1.2;
+
+                    //         i {
+                    //             line-height: 1.2;
+                    //         }
+
+                    //         &.warning,
+                    //         &.success,
+                    //         &.cancel {
+                    //             margin-top: 0;
+                    //             padding: 1px 3px;
+
+                    //             i {
+                    //                 line-height: 1.2;
+                    //             }
+
+                    //         }
+                    //     }
+                    // }
+
+                    // .btn-warn-component {
+
+                    //     i {
+                    //         line-height: 1.2;
+                    //     }
+
+                    //     // .warning {
+                    //     //     width: 50px;
+                    //     //     text-align: center;
+                    //     //     overflow: hidden;
+                    //     //     display: inline-block;
+                    //     //     line-height: 1.1;
+                    //     //     vertical-align: middle;
+                    //     //     font-size: 14px;
+                    //     //     margin: 7px 5px 5px 0;
+                    //     //     height: 20px;
+
+                    //     //     button {
+                    //     //         padding: 0;
+                    //     //         line-height: 1.1;
+                    //     //         display: inline-block;
+                    //     //         margin: 5px 0;
+                    //     //     }
+                    //     // }
+                    // }
+
+                    .panel-body li {
+                        height: auto;
+                        border-top: 1px solid $eee;
+                        padding: 5px 0;
+
+                        &:last-child {
+                            border-bottom: 1px solid $eee;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+.validation {
+
+    .validation-wrap {
+
+        .status {
+            @include border-radius(0);
+            margin-bottom: 10px;
+
+            .panel-heading {
+                padding: 0;
+                background: none;
+
+                .panel-title {
+                    @extend %clearfix;
+                    padding: 0;
+                    display: block;
+                    background: none;
+
+                    .dataset-status {
+                        font-size: 18px;
+                        padding: 10px;
+                        display: block;
+                        float: left;
+                        width: 200px;
+                        text-align: left;
+                        margin-left: 40px;
+                        line-height: 30px;
+                        i {
+                            font-size: 30px;
+                            position: absolute;
+                            left: -25px;
+                        }
+                    }
+
+                    .label {
+                        @include border-radius (0);
+                        text-transform: uppercase;
+                        margin: 10px 3px 10px 0;
+                        padding: 8px 10px;
+                        font-size: 14px;
+
+                        &.text-warning {
+                            color: darken($brand-warning, 10%);
+                        }
+
+                    }
+
+                    strong {
+                        color: $c-66;
+                    }
+
+                    .meta,
+                    .badge {
+                        background: none;
+                        color: $c-9e;
+                        font-size: 12px;
+                    }
+
+                    .meta label {
+                        text-transform: none;
+                    }
+
+                    &.super-valid {
+                         a{
+                            cursor: default;
+                        }
                     }
                 }
 
