--- a/src/sass/crn_app/_dataset.sidebar.scss
+++ b/src/sass/crn_app/_dataset.sidebar.scss
@@ -9,9 +9,10 @@
     margin: 0;
     cursor: pointer;
     color: $c-56;
-    border-right: 2px solid $c-9e;
-    border-bottom: 2px solid $c-9e;
+    border-right: 2px solid $bbb;
+    border-bottom: 2px solid $bbb;
 }
+
 
 html,
 body,
@@ -86,7 +87,7 @@ body,
 
     .slide {
         z-index: 1200;
-        background-color: $de;
+        background-color: $eee;
         display: block;
         position: relative;
         height: 100%;
@@ -97,6 +98,7 @@ body,
             margin: 0;
             padding: 8px 15px;
             width: 100%;
+            background: $de
         }
 
         ul {
@@ -107,7 +109,7 @@ body,
             height: 100%;
             position: absolute;
             width: 100%;
-            border-right: 2px solid $c-9e;
+            border-right: 2px solid $bbb;
 
             a {
                 font-size: 14px;
@@ -124,10 +126,15 @@ body,
                     color: $black;
                 }
 
+                &.active:hover,
                 &.active {
-                    background-color:  $transparent1;
+                    background-color:  $white;
                     box-shadow: inset 0 0 2px $transparent1;
-                    color: $black;
+                    color: $sky;
+
+                    .date-modified {
+                        color: $sky;
+                    }
                 }
 
                 .dataset-type {
@@ -139,21 +146,21 @@ body,
                     text-align: right;
                     display: inline-block;
                     font-size: 11px;
-                    color: #444;
+                    color: $c-77;
                     .update-label {
                         text-transform: uppercase;
                     }
                 }
                 .icons {
-                    border-left: 1px solid #bbb;
+                    border-left: 1px solid $bbb;
                     padding-left: 0;
                     .published,
                     .job-count {
                         padding: 10px 5px;
-                        min-width: 35px;
+                        min-width: 40px;
                         text-align: center;
                         display: inline-block;
-                        border-right: 1px solid #bbb;
+                        border-right: 1px solid $bbb;
 
                         .count {
                             font-size: 10px;
