--- a/src/sass/crn_app/_dataset.sidebar.scss
+++ b/src/sass/crn_app/_dataset.sidebar.scss
@@ -9,8 +9,11 @@
     margin: 0;
     cursor: pointer;
     color: $c-56;
-    border-right: 2px solid $bbb;
+    border: none;
     border-bottom: 2px solid $bbb;
+}
+.open .show-nav-btn{
+    border-right: 2px solid $bbb;
 }
 
 
@@ -152,16 +155,13 @@ body,
                     }
                 }
                 .icons {
-                    border-left: 1px solid $bbb;
                     padding-left: 0;
                     .published,
                     .job-count {
-                        padding: 10px 5px;
-                        min-width: 40px;
+                        margin: 10px 0;
                         text-align: center;
                         display: inline-block;
-                        border-right: 1px solid $bbb;
-
+                        padding: 0 5px;
                         .count {
                             font-size: 10px;
                             margin-left: 2px;
