--- a/src/sass/crn_app/_dataset.tools.scss
+++ b/src/sass/crn_app/_dataset.tools.scss
@@ -47,25 +47,32 @@
             margin-right: 5px;
             position: relative;
             color: $c-66;
-            border-right: 2px solid $ccc;
             width: auto;
             max-width: 400px;
             font-size: 21px;
             overflow: hidden;
             transition: max-width .3s;
             -webkit-transition: max-width .3s;
+            cursor: pointer;
 
-            div {
+            .snapshot,
+            .draft {
+                background: $de;
                 padding: 7px 20px;
                 white-space: nowrap;
                 height: 45px;
+                border-right: 2px solid $bbb;
+                border-bottom: 2px solid $bbb;
+            }
+            .snapshot {
+                color: $c-56;
+                &:hover { color: $c-77;}
+            }
 
-                &.snapshot {
-                    color: $c-56;
-                }
-
-                &.draft {
-                    color: $brand-danger;
+            .draft {
+                color: $brand-danger;
+                &:hover {
+                    color: darken($brand-danger, 10%);
                 }
             }
         }
@@ -144,5 +151,5 @@
     margin: 0;
     transition: max-width .3s;
     -webkit-transition: max-width .3s;
-    border:none;
+    border: none;
 }
